--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -12,6 +12,14 @@
     flex: 0 1 100%;
     width: 100%;
     border: 1px solid #F5F5F5;
+    margin-bottom: 15px;
+}
+
+.card-figure--image{
+    width: 125px;
+    height: 168px;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
 .card-informations{
@@ -29,7 +37,10 @@
     font-size: 10.24px;
     margin-bottom: 9px;
 }
-
+.card-informations--description{
+    font-size: 10.24px;
+    line-height: 150%;
+}
 .card-informations--location{
     display: flex;
     gap: 12px;
